cmake_minimum_required (VERSION 3.8)
set(SFML_STATIC_LIBRARIES TRUE)
set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
find_package(SFML 2.5.1 COMPONENTS graphics audio network REQUIRED)
add_subdirectory(Visualization)
add_executable (StableFluids "StableFluids.cpp")
target_link_libraries(StableFluids Visualization)